ing.k8s.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: aedproxy
subsets:
  - addresses:
      - ip: 95.111.255.92
    ports:
      - port: 3101
---
apiVersion: v1
kind: Service
metadata:
  name: aedproxy
spec:
  ports:
    - protocol: TCP
      port: 3101
      targetPort: 3101
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aedproxy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: aedproxy.enteam.pl
      http:
        paths:
          - path: /
            backend:
              serviceName: aedproxy
              servicePort: 3101
